add security schemes
