# proxyc/handler/proxyhandler/types.go
@@ -1,0 +1,38 @@
+package proxyhandler
+
+import (
+	"errors"
+
+	"github.com/hasura/goenvconf"
+)
+
+var (
+	errOAuth2ClientCredentialsRequired = errors.New("clientId and clientSecret must not be empty")
+	errOAuth2TokenURLRequired          = errors.New(
+		"tokenUrl is required in the OAuth2 Client Credentials flow",
+	)
+)
+
+// InsertRouteOptions represents options for inserting routes.
+type InsertRouteOptions struct {
+	GetEnv goenvconf.GetEnvFunc
+}
+
+// APIKeyCredentials holds apiKey credentials of the security scheme.
+type APIKeyCredentials struct {
+	APIKey *goenvconf.EnvString `json:"apiKey,omitempty" yaml:"apiKey,omitempty"`
+}
+
+// BasicCredentials holds basic credentials of the security scheme.
+type BasicCredentials struct {
+	Username *goenvconf.EnvString `json:"username,omitempty" yaml:"username,omitempty"`
+	Password *goenvconf.EnvString `json:"password,omitempty" yaml:"password,omitempty"`
+}
+
+// OAuth2Credentials holds OAuth2 credentials of the security scheme.
+type OAuth2Credentials struct {
+	ClientID     *goenvconf.EnvString `json:"clientId,omitempty" yaml:"clientId,omitempty"`
+	ClientSecret *goenvconf.EnvString `json:"clientSecret,omitempty" yaml:"clientSecret,omitempty"`
+	// Optional query parameters for the token and refresh URLs.
+	EndpointParams map[string]goenvconf.EnvString `json:"endpointParams,omitempty" yaml:"endpointParams,omitempty"`
+}
